Retain ordinary if join witnesses for rejected free